--- a/Cesium_what3wordsGeocoderService.html
+++ b/Cesium_what3wordsGeocoderService.html
@@ -12,8 +12,7 @@
         <div id="cesiumContainer"></div>
         <script>
         // Your access token can be found at: https://cesium.com/ion/tokens.
-            Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJjNjViZmNjMy00ZDc2LTQxMDAtYTRmMC05NzEwMGRiMzA2MWMiLCJpZCI6NDA2NTYsImlhdCI6MTYwOTAwNTQwOX0.AZefXocsmHI-wY3qy0z9xNcn2Sa9VUehJcAiJ_1fkLQ';
-            //Cesium.Ion.defaultAccessToken = 'Insert_Your_Cesium_Access_Token_Here';
+            Cesium.Ion.defaultAccessToken = 'Insert_Your_Cesium_Access_Token_Here';
         // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
         const viewer = new Cesium.Viewer('cesiumContainer', {
             terrainProvider: Cesium.createWorldTerrain(),
